// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`#documents.create should error with invalid parentDocument 1`] = `
{
  "error": "authorization_error",
  "message": "Authorization error",
  "ok": false,
  "status": 403,
}
`;

exports[`#documents.delete should require authentication 1`] = `
{
  "error": "authentication_required",
  "message": "Authentication required",
  "ok": false,
  "status": 401,
}
`;

exports[`#documents.documents should require authentication 1`] = `
{
  "error": "authentication_required",
  "message": "Authentication required",
  "ok": false,
  "status": 401,
}
`;

exports[`#documents.documents should return 403 if user does not have access to the document 1`] = `
{
  "error": "authorization_error",
  "message": "Authorization error",
  "ok": false,
  "status": 403,
}
`;

exports[`#documents.empty_trash should not allow non-admin users 1`] = `
{
  "error": "authorization_error",
  "message": "Admin role required",
  "ok": false,
  "status": 403,
}
`;

exports[`#documents.empty_trash should require authentication 1`] = `
{
  "error": "authentication_required",
  "message": "Authentication required",
  "ok": false,
  "status": 401,
}
`;

exports[`#documents.list should require authentication 1`] = `
{
  "error": "authentication_required",
  "message": "Authentication required",
  "ok": false,
  "status": 401,
}
`;

exports[`#documents.restore should require authentication 1`] = `
{
  "error": "authentication_required",
  "message": "Authentication required",
  "ok": false,
  "status": 401,
}
`;

exports[`#documents.search should require authentication 1`] = `
{
  "error": "authentication_required",
  "message": "Authentication error",
  "ok": false,
  "status": 401,
}
`;

exports[`#documents.update should require authentication 1`] = `
{
  "error": "authentication_required",
  "message": "Authentication required",
  "ok": false,
  "status": 401,
}
`;

exports[`#documents.update should require text while appending 1`] = `
{
  "error": "validation_error",
  "message": "text is required when using append, prepend, or editMode",
  "ok": false,
  "status": 400,
}
`;

exports[`#documents.viewed should require authentication 1`] = `
{
  "error": "authentication_required",
  "message": "Authentication required",
  "ok": false,
  "status": 401,
}
`;
